hotfix: .jar file load